@@ -15,16 +15,14 @@
 package tech.sirwellington.alchemy.http;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import tech.sirwellington.alchemy.arguments.AlchemyAssertion;
 import tech.sirwellington.alchemy.arguments.FailedAssertionException;
 import tech.sirwellington.alchemy.test.AlchemyTest;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -37,26 +35,23 @@ import static tech.sirwellington.alchemy.test.ThrowableAssertion.assertThrows;
  * @author SirWellington
  */
 @AlchemyTest
-public class HttpAssertionsTest
-{
+public class HttpAssertionsTest {
 
     private RequestMethod requestMethod;
 
     @BeforeEach
-    public void setUp()
-    {
+    public void setUp() {
     }
 
     @Test
-    public void testConstructor()
-    {
-        assertThrows(() -> HttpAssertions.class.getDeclaredConstructor().newInstance())
-                .isInstanceOf(Exception.class);
+    public void testConstructor() {
+        assertThrows(
+            () -> HttpAssertions.class.getDeclaredConstructor().newInstance()
+        );
     }
 
     @Test
-    public void testValidHttpStatusCode()
-    {
+    public void testValidHttpStatusCode() {
         var instance = HttpAssertions.validHttpStatusCode();
         assertThat(instance, notNullValue());
 
@@ -65,17 +60,16 @@ public class HttpAssertionsTest
 
         var badStatusCode = one(integers(-100, 100));
         assertThrows(() -> instance.check(badStatusCode))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         var anotherBadCode = one(integers(600, Integer.MAX_VALUE));
         assertThrows(() -> instance.check(anotherBadCode))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    public void testValidResponseClass()
-    {
+    public void testValidResponseClass() {
         // Check Object
         var instanceOne = HttpAssertions.validResponseClass();
         assertThat(instanceOne, notNullValue());
@@ -87,21 +81,20 @@ public class HttpAssertionsTest
 
         // Edge Cases
         assertThrows(() -> instanceOne.check(null))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         var instanceThree = HttpAssertions.validResponseClass();
         assertThrows(() -> instanceThree.check((Class<Object>) (Class<?>) Void.class))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 
     @Test
-    public void testRequestReady() throws MalformedURLException
-    {
+    public void testRequestReady() throws MalformedURLException {
         var instance = HttpAssertions.ready();
 
-        URL url = one(Generators.validUrls());
+        var url = one(Generators.validUrls());
 
-        HttpRequest request = mock(HttpRequest.class);
+        var request = mock(HttpRequest.class);
         when(request.url()).thenReturn(url);
         when(request.method()).thenReturn(requestMethod);
 
@@ -109,16 +102,15 @@ public class HttpAssertionsTest
     }
 
     @Test
-    public void testRequestReadyEdgeCases() throws MalformedURLException
-    {
+    public void testRequestReadyEdgeCases() throws Exception {
         var instance = HttpAssertions.ready();
 
         // Edge cases
         assertThrows(() -> instance.check(null))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
-        URL url = one(Generators.validUrls());
-        HttpRequest request = mock(HttpRequest.class);
+        var url = one(Generators.validUrls());
+        var request = mock(HttpRequest.class);
         when(request.url()).thenReturn(url);
         when(request.method()).thenReturn(requestMethod);
 
@@ -126,7 +118,7 @@ public class HttpAssertionsTest
         when(request.method()).thenReturn(null);
 
         assertThrows(() -> instance.check(request))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         when(request.method()).thenReturn(requestMethod);
 
@@ -134,77 +126,76 @@ public class HttpAssertionsTest
         when(request.url()).thenReturn(null);
 
         assertThrows(() -> instance.check(request))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         // Bad URL
-        var badUrl = new URL("file://" + one(alphabeticStrings()));
-        when(request.url()).thenReturn(badUrl);
+        var badUrl = new URI("file://" + one(alphabeticStrings()));
+        when(request.url()).thenReturn(badUrl.toURL());
 
         assertThrows(() -> instance.check(request))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 
     @Test
-    public void testValidContentType()
-    {
+    public void testValidContentType() {
         var instance = HttpAssertions.validContentType();
         assertThat(instance, notNullValue());
 
-        var contentType = one(stringsFromFixedList(ContentTypes.APPLICATION_JSON, ContentTypes.PLAIN_TEXT));
+        var contentType = one(stringsFromFixedList(
+            ContentTypes.APPLICATION_JSON,
+            ContentTypes.PLAIN_TEXT
+        ));
 
         instance.check(contentType);
         instance.check(contentType + one(alphabeticStrings()));
     }
 
     @Test
-    public void testValidContentTypeEdgeCases()
-    {
+    public void testValidContentTypeEdgeCases() {
         var instance = HttpAssertions.validContentType();
 
         // Edge cases
         assertThrows(() -> instance.check(null))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         assertThrows(() -> instance.check(""))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         assertThrows(() -> instance.check(one(alphabeticStrings())))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         assertThrows(() -> instance.check(one(hexadecimalString(10))))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 
     @Test
-    public void testJsonArray()
-    {
+    public void testJsonArray() {
         var instance = HttpAssertions.jsonArray();
         assertThat(instance, notNullValue());
 
-        com.google.gson.JsonArray valid = one(Generators.jsonArrays());
+        var valid = one(Generators.jsonArrays());
         instance.check(valid);
 
-        com.google.gson.JsonObject object = one(Generators.jsonObjects());
+        var object = one(Generators.jsonObjects());
         assertThrows(() -> instance.check(object))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
-        com.google.gson.JsonPrimitive primitive = one(Generators.jsonPrimitives());
+        var primitive = one(Generators.jsonPrimitives());
         assertThrows(() -> instance.check(primitive))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 
     @Test
-    public void testOkResponse()
-    {
+    public void testOkResponse() {
         var instance = HttpAssertions.okResponse();
         assertThat(instance, notNullValue());
 
         // Check with null argument
         assertThrows(() -> instance.check(null))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
 
         // Response is OK
-        HttpResponse okResponse = mock(HttpResponse.class);
+        var okResponse = mock(HttpResponse.class);
         when(okResponse.isOk()).thenReturn(true);
         instance.check(okResponse);
 
@@ -212,6 +203,6 @@ public class HttpAssertionsTest
         var notOkResponse = mock(HttpResponse.class);
         when(notOkResponse.isOk()).thenReturn(false);
         assertThrows(() -> instance.check(notOkResponse))
-                .isInstanceOf(FailedAssertionException.class);
+            .isInstanceOf(FailedAssertionException.class);
     }
 }
